# Local-Movies

./: README.md
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/: CMakeLists.txt  main.cpp  movies.txt  watch_list
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/domain/: movie.cpp  movie.h  template_dynamic_vector.h  validator.cpp  validator.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/gui/: gui.cpp  gui.h  movies_table_model.cpp  movies_table_model.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/repository/: repository.cpp  repository.h  repository_exceptions.cpp  repository_exceptions.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/service/: service.cpp  service.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/tests/: tests.cpp  tests.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/ui/: ui.cpp  ui.h
a89-915-Negrila-Iulia/a67-915-Negrila-Iulia/a45-915-Negrila-Iulia/user_data/: csv_watch_list.cpp  csv_watch_list.h  file_watch_list.cpp  file_watch_list.h  html_watch_list.cpp  html_watch_list.h  watch_list.cpp  watch_list.h
